feat(server): license verification
